--- a/mock/style.css
+++ b/mock/style.css
@@ -72,7 +72,9 @@ body{
   background-color: #FAFAFA;
   color: black;
 }
-
+input:invalid {
+    border: 1px solid red;
+}
 /* select option{
   color: black;
 } */
